Fixes #30 -- Checks the reading in a SyllableConnector against the reading selected in the SyllablePropertyWidget if the SyllableEditor is active. The issue was straightforward enough, but required adding a new "data path" between the EditorTools and the EditorComponent itself: the SyllablePropertyWidget, which holds the applicable activeReading, is attached as a ViewChild to the EditorComponent, but the AnnotationsView could only "see" up to the SheetOverlayService -> SheetOverlayComponent -> EditorService. Now there is an _editor public member in the EditorService.
Also added minor UI update: the red border around the active page seemed too much like it was indicating a problem, so I changed it to gray.

--- a/src/app/editor/pages-preview/pages-preview.component.css
+++ b/src/app/editor/pages-preview/pages-preview.component.css
@@ -17,7 +17,7 @@
 }
 
 .page-preview.selected-page {
-  border: 2px solid red;
+  border: 4px solid gray;
 }
 
 .page-preview-image {
